# slicetune

./: .gitignore  .pre-commit-config.yaml  README.md  conda-env.yaml  pyproject.toml
.devcontainer/: devcontainer.json
docker/dev/: Dockerfile
slicetune/: __init__.py  hello.py  model.py  nn.py  utils.py
